# homeostatic_city_biocor

./: .gitignore  .nojekyll  BEAUTIFUL_LUNA_DASHBOARD.html  BHCS_ARCHITECTURE.md  BHCS_Aligned_Dashboard.html  BHCS_Aligned_Integration.py  BHCS_Core_Engine.py  BHCS_Luna_Integrated_Dashboard.html  COMPLETE_INTEGRATED_DASHBOARD.html  CONTRIBUTING.md  CREATE_REPOSITORY_GUIDE.md  DEPLOYMENT_GUIDE.md  FINAL_COMPLETE_INTEGRATION.py  GITHUB_RELEASE_NOTES.md  LICENSE  LUNA_CHAT_DASHBOARD.html  LUNA_CHAT_STANDALONE.html  NEXT_IMPLEMENTATIONS.md  PROFESSIONAL_DASHBOARD.html  README-PYTORCH_JAX.md  README.md  README_GITHUB_FIX.md  REAL_INTEGRATION_PLAN.md  REAL_TIME_DASHBOARD.html  REAL_TIME_ZONE_IMPLEMENTATION.py  RUST_FAST_ONLINE.py  RUST_REALTIME_DASHBOARD.html  RUST_REALTIME_ONLINE.py  RUST_SIMPLE_ONLINE.py  RUST_TS_REALTIME.ts  START_LUNA_REALTIME.py  START_LUNA_SIMPLE.py  biocore_ai_predictor.py  biocore_ai_predictor_simple.py  enhanced_mock_engine.py  global_network.py  index.html  integrated_bhcs_with_ai.py  integrated_system.py  iot_sensor_network.py  (+17 more)
.github/workflows/: deploy.yml  pages.yml
backend/: fastapi_server.py  requirements.txt
city_core/: Cargo.toml
city_core/src/: main.rs
config/: settings.py
dashboard/: README.md  advanced_dashboard.html  app.js  bhcs_dashboard.html  futuristic_dashboard.html  index.html  luna_integrated.html  luna_voice_dashboard.html  styles.css
docs/: ROADMAP.md  SYSTEM_PHILOSOPHY.md  architecture.md
examples/: demo_scenario.py  simple_simulation.py
frontend/: package-lock.json  package.json  webpack.config.js
frontend/src/: app.ts  index.html
lunabeyond-ai/: README.md  requirements.txt
lunabeyond-ai/models/: advanced_patterns.pkl  (+4 more)
python-biocore/: pyproject.toml
python-biocore/biocore/: __init__.py  client.py  data.py  engine.py  interface.py  model.py  pathways.py  simulator.py
rust-core/: Cargo.toml
rust-core/.cargo/: config.toml
rust-core/src/: api.rs  engine.rs  fast_api_server.rs  lib.rs  luna_evolution.rs  main.rs  main_optimized.rs  simple_engine.rs  zone.rs
src/: __init__.py
tests/: test_simulation.py
ts-bhcs/: package-lock.json  package.json  simple-app.js  simple-enhanced.html  simple.html  tsconfig.json  webpack.config.js
(+52 files in other folders)
