[package]
name = "homeostatic-city-core"
version = "0.1.0"
edition = "2021"
description = "Rust homeostatic engine for city simulation"
authors = ["BHCS Team"]

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
warp = "0.3"
uuid = { version = "1.0", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
log = "0.4"
env_logger = "0.10"

[[bin]]
name = "bhcs_engine"
path = "src/main.rs"