[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bhcs-python-biocore"
version = "0.1.0"
authors = [
    {name = "BHCS Team", email = "team@bhcs.org"},
]
description = "Abstract biological and environmental signal modeling for BHCS"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Topic :: Scientific/Engineering",
]

dependencies = [
    "numpy>=1.21.0",
    "requests>=2.25.0",
    "scikit-learn>=1.0.0",
    "joblib>=1.0.0",
]

[project.urls]
Homepage = "https://github.com/Quantumlorld/homeostatic_city_biocor"
Repository = "https://github.com/Quantumlorld/homeostatic_city_biocor"
Issues = "https://github.com/Quantumlorld/homeostatic_city_biocor/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["biocore*"]
