[package]
name = "bhcs-rust-core"
version = "0.1.0"
edition = "2021"
authors = ["BHCS Team"]
description = "Deterministic homeostatic regulation engine for BHCS"
license = "MIT"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rand = "0.8"

[lib]
name = "bhcs_core"
path = "src/lib.rs"

[[bin]]
name = "bhcs_engine"
path = "src/simple_engine.rs"
